--- a/app/index.html
+++ b/app/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
 
-    <link href="styles/main.css" rel="stylesheet" />
+    <link href="styles/portalStyles.css" rel="stylesheet" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
-<body style="padding-top: 10px">
 
-<div class="container" id="app-root"></div>
+<body>
+
+<div id="app-root"></div>
 
 <script src="bundle.js"></script>
 </body>
