added use of amp

--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>RE08</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+
+    <script src="https://amp.ai/libs/379e2c9b838462c3.js"></script>
 
     <link href="styles/portalStyles.css" rel="stylesheet" />
 
