--- a/app/index.html
+++ b/app/index.html
@@ -20,5 +20,11 @@
 <div id="app-root"></div>
 
 <script src="bundle.js"></script>
+<script>
+    // 15 minutes
+    window.ampConfig = {
+        sessionTTL: 15 * 60 * 1000
+    };
+</script>
 </body>
 </html>
